# PSP-DRP

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
desktop-companion/: Cargo.toml  build_output.txt  config.toml.example  errors.txt
desktop-companion/src/: ascii_art.rs  config.rs  discord.rs  main.rs  protocol.rs  server.rs  thumbnail_matcher.rs  tui.rs  usage_tracker.rs  usb_transport.rs
psp-plugin/: Makefile  exports.exp  psp_drp.ini  psp_drp.ini.example
psp-plugin-rust/: .gitignore
psp-plugin/loader/: Makefile
psp-plugin/loader/src/: main.c
psp-plugin/loader_game/: Makefile  exports.exp
psp-plugin/loader_game/src/: main.c
psp-plugin/net/: Makefile  exports.exp
psp-plugin/net/src/: config.c  config.h  discord_rpc.h  game_detect.c  game_detect.h  kubridge.S  main.c  network.c  network.h  sfo.c  sfo.h  syscalls.c  usage_tracker.c  usage_tracker.h  usb_driver.c  usb_driver.h
psp-plugin/src/: config.c  config.h  discord_rpc.h  game_detect.c  game_detect.h  loader.c  main.c  network.c  network.h  sfo.c  sfo.h
psp-plugin/ui/: Makefile  exports.exp
psp-plugin/ui/src/: draw.c  draw.h  font8x8.h  main.c
psp-plugin/usb/: Makefile  exports.exp  psp_drp_usb.S  psp_drp_usb.elf  psp_drp_usb.prx  psp_drp_usb_exports.c
psp-plugin/usb/src/: config.c  config.h  game_detect.c  main.c  sfo.c  usb_driver.c  usb_driver.h  usb_protocol.c  usb_protocol.h
psp-stats-app/: Cargo.toml  Psp.toml
psp-stats-app/src/: config.rs  main.rs  network.rs  stats.rs  ui.rs
shared/: protocol.md
