[package]
name = "psp-drp"
version = "0.1.0"
edition = "2021"
description = "Desktop companion app for PSP DRP"
authors = ["qberty"]

[dependencies]
# Discord Rich Presence
discord-rich-presence = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# CRC32 for icon verification
crc32fast = "1.3"

# Image processing (for icon handling)
image = "0.24"
base64 = "0.21"

# Date/time for usage tracking
chrono = "0.4"

# TUI (Terminal User Interface)
ratatui = "0.29"
crossterm = "0.28"

# ASCII art generation from images
artem = "2.0"

# Fuzzy string matching for thumbnail lookup
strsim = "0.11"

# HTTP client for fetching thumbnail index
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
